--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Healthy Wealthy — Home</title>
-  <link rel="stylesheet" href="css/styles.css" />
+<link rel="stylesheet" href="styles.css">
+<script src="script.js" defer></script>
+
+
 </head>
 
 <body>
@@ -25,7 +28,7 @@
   <!-- Hero Section -->
   <header class="hero">
     <div class="hero-inner">
-      <img src="C:\Users\hafiz\OneDrive\Desktop\HealthyWealthy\assets\images\logo.png.jpg"/>
+      <img src="logo.png" alt="Healthy Wealthy logo">
       <h1>Train Smart. Live Strong.</h1>
       <p>Your fitness journey starts here — inclusive, affordable, and fun.</p>
       <div class="hero-cta">
@@ -84,9 +87,10 @@
     <button id="acceptCookies">Accept</button>
   </div>
 
-  <script src="js/script.js"></script>
+
 </body>
 </html>
+
 
 
 
