--- a/about.html
+++ b/about.html
@@ -4,13 +4,17 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>About — Healthy Wealthy</title>
-  <link rel="stylesheet" href="css/styles.css" />
+<link rel="stylesheet" href="styles.css">
+<script src="script.js" defer></script>
+
 </head>
 
 <body>
   <nav class="nav">
     <div class="nav-center">
-      <img src="C:\Users\hafiz\OneDrive\Desktop\HealthyWealthy\assets\images\logo.png.jpg">
+      
+<img src="logo.png" alt="Healthy Wealthy logo">
+
       <h1 class="brand">Healthy Wealthy</h1>
     </div>
     <div class="nav-links">
@@ -59,6 +63,7 @@
   <button id="modeToggle" class="mode-btn">🌙</button>
   <button id="scrollTop" class="scroll-btn">⬆</button>
   <button id="scrollBottom" class="scroll-btn">⬇</button>
-  <script src="js/script.js"></script>
+
 </body>
 </html>
+
