--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!-- Hero Section -->
   <header class="hero">
     <div class="hero-inner">
-      <img src="logo.png" alt="Healthy Wealthy logo">
+      <img src="logo.png.jpg>
       <h1>Train Smart. Live Strong.</h1>
       <p>Your fitness journey starts here — inclusive, affordable, and fun.</p>
       <div class="hero-cta">
@@ -90,6 +90,7 @@
 
 </body>
 </html>
+
 
 
 
