--- a/membership.html
+++ b/membership.html
@@ -13,7 +13,7 @@
   <nav class="nav">
     <div class="nav-center">
       
-<img src="logo.png" alt="Healthy Wealthy logo">
+<img src="logo.png.jpg alt="Healthy Wealthy logo">
 
       <h1 class="brand">Healthy Wealthy</h1>
     </div>
@@ -72,4 +72,5 @@
   
 </body>
 </html>
+
 
