--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- Navigation Bar -->
   <nav class="nav">
     <div class="nav-center">
-      <img src="assets/images/logo.png" alt="Healthy Wealthy logo" class="logo">
+      <img src="logo.png.jpg"/>
       <h1 class="brand">Healthy Wealthy</h1>
     </div>
 
@@ -90,6 +90,7 @@
 
 </body>
 </html>
+
 
 
 
